# Nephos

./: .gitignore  CMakeLists.txt  LICENCE  README.md  a.py  install.sh  output.txt  run.sh  todo  versaille_2.ply
cmake/Python/: CMakeLists.txt  MANIFEST.in  binding.cpp  pyproject.toml  setup.py  test.py
cmake/Python/pynephos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cmake/binding/: CMakeLists.txt
doc/compilation/: CMakeLists.txt  note  toolchain_1.cmake
src/: App.cpp  CMakeLists.txt  Config.h  app.cpp  app.h  config.h  main.cpp
src/Application/: APP_main.cpp  APP_main.h  App_main.cpp  App_main.h  CMakeLists.txt  Configuration.h  Loop.cpp  Loop.h  Namespace.h  Node.cpp  Node.h
src/Application/GUI/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h  Structure.h
src/Application/Interface/: App.cpp  App.h  Namespace.h
src/Application/Profiler/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Application/Scene/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/: CMakeLists.txt  Node.cpp  Node.h
src/Core/Camera/: Namespace.h
src/Core/Control/: CMakeLists.txt  Namespace.h  Node.cpp
src/Core/Data/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/Engine/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/Exporter/: CMakeLists.txt  Node.cpp  Node.h
src/Core/Graph/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/IO/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/Importer/: Node.cpp  Node.h
src/Core/Operation/: CMakeLists.txt
src/Core/Profiler/: CMakeLists.txt  Node.cpp  Node.h
src/Core/Renderer/: Node.h
src/Core/System/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Core/Utility/: CMakeLists.txt  Namespace.h
src/Core/truc/: CMakeLists.txt
src/Dev/: CMakeLists.txt  Namespace.h
src/Dev/gui/: Menu.cpp  Menu.h  Namespace.h  Tab.cpp  Tab.h
src/Dynamic/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Dynamic/Dynamic/: CMakeLists.txt  Node.cpp  Node.h
src/Dynamic/Player/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Dynamic/Processing/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Dynamic/Sensor/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Element/: CMakeLists.txt
src/Element/Capture/: Capture.cpp  Capture.h
src/Element/ELE_capture/: ELE_capture.cpp  ELE_capture.h
src/Element/ELE_database/: ELE_database.cpp  ELE_database.h
src/Element/ELE_git/: ELE_git.cpp  ELE_git.h  Git.cpp  Git.h
src/Element/ELE_shader/: compile.sh
src/Element/ELE_specific/: FPS_counter.cpp  FPS_counter.h  common.h
src/Element/ELE_window/: ELE_window.cpp  ELE_window.h  Window.cpp  Window.h
src/Element/Engine/: Engine.h
src/Element/Git/: Git.cpp  Git.h
src/Element/Window/: Window.cpp  Window.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Namespace.h  Node.cpp  Node.h  Param.h  Structure.h
src/Engine/Base/: Base_glyph.h  Base_object.cpp  Base_object.h  Data.h  Namespace.h  Source.h  Struct_camera.cpp  Struct_camera.h  Struct_cloud.h  Struct_entity.h  Struct_glyph.h  Struct_object.cpp  Struct_object.h  Struct_sensor.h  Struct_set.cpp  Struct_set.h  Struct_video.h
src/Engine/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  Namespace.h  Node.cpp  Node.h
src/Engine/Capture/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/Control/: CMakeLists.txt  Node.cpp  Node.h
src/Engine/Data/: CMakeLists.txt  Data.cpp  Data.h  ENG_data.cpp  ENG_data.h  Namespace.h  Node.cpp  Node.h
src/Engine/Dynamic/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/ENG_camera/: Camera.cpp  Camera.h  ENG_camera.cpp  ENG_camera.h  Namespace.h  Struct_camera.cpp  Struct_camera.h
src/Engine/ENG_data/: Data.cpp  Data.h  ENG_data.cpp  ENG_data.h  Namespace.h
src/Engine/ENG_gpu/: GPU_data.cpp  GPU_data.h  GPU_render.cpp  GPU_render.h  GPU_texture.cpp  GPU_texture.h
src/Engine/ENG_render/: ENG_renderpass.cpp  ENG_renderpass.h  RP_edl.cpp  RP_edl.h  RP_gui.cpp  RP_gui.h  RP_scene.cpp  RP_scene.h
src/Engine/ENG_shader/: ENG_shader.cpp  ENG_shader.h  Shader.h  compile.sh
src/Engine/ENG_vulkan/: DR_edl.cpp  DR_scene.cpp  DR_scene.h  ENG_edl.cpp  ENG_edl.h  ENG_gui.cpp  ENG_gui.h  ENG_renderpass.cpp  ENG_renderpass.h  ENG_scene.cpp  ENG_scene.h  RP_edl.cpp  RP_edl.h  RP_gui.cpp  RP_gui.h  RP_scene.cpp  RP_scene.h  RP_ui.cpp
src/Engine/Entity/: Base_glyph.cpp  Base_glyph.h  Base_object.h  Namespace.h  Struct_camera.h
src/Engine/GPU/: GPU_data.cpp  GPU_data.h  GPU_render.cpp  GPU_texture.cpp  GPU_texture.h
src/Engine/GUI/: Node.h
src/Engine/Glyph/: CMakeLists.txt  Node.cpp  Node.h
src/Engine/IO/: Node.cpp  Node.h
src/Engine/Interface/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/Loader/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/Module/: CMakeLists.txt  Node.cpp  Node.h
src/Engine/Node/: Engine.cpp  Engine.h  Namespace.h
src/Engine/Operation/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/Profiler/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Engine/Render/: CMakeLists.txt  ENG_renderpass.cpp  ENG_renderpass.h  Manager.cpp  Manager.h  Namespace.h  Node.cpp  Node.h  RP_edl.cpp  RP_edl.h  RP_glyph.cpp  RP_glyph.h  RP_gui.cpp  RP_gui.h  RP_scene.cpp  RP_scene.h
src/Engine/Renderer/: CMakeLists.txt  Node.cpp  Node.h
src/Engine/Rendering/: Node.cpp  (+3 more)
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.h  GUI_tab.cpp  GUI_tab.h  Namespace.h  Node.cpp  Node.h
src/Module/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Processing/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Profiler/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h
src/Ressource/: CMakeLists.txt
src/Splatting/: CMakeLists.txt  truc.cpp
src/Utility/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h  Utility.cpp  Utility.h  Utility_namespace.h
src/Vulkan/: CMakeLists.txt  Namespace.h  Node.cpp  Node.h  Structure.h  VK_engine.cpp  VK_engine.h  VK_struct.h  Vulkan.cpp  Vulkan.h  Vulkan_namespace.h
tests/: CMakeLists.txt  Imgui.cpp  Imgui.h  Namespace.h  imgui.cpp  main.cpp
tests/gui/: Imgui.cpp  Imgui.h
tests/src/: Manager.cpp  Manager.h  Namespace.h
(+8324 files in other folders)
